2002-12-10  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Enable libffi on darwin by default.

2002-12-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: ([removeObjectsFromIndices:numIndices:])
	bugfix for sorting by Kelvin Sherlock.
	* Source/NSConnection.m: Experimental code to keep local objects
	retained long enough to deal with most cases where the remote
	process may want them again.
	* Source/NSHost.m: Don't cache local host name ... it may change
	due to use of DHCP etc.

2002-12-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Fix race condition firing perform holder.
	Fix supplied by Philip Derrin.

2002-12-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: Fix uninitialised local variable 'locale'
	which was causing a crash ... not 100% sure my fix is making the code
	work as intended.  Could Adam please check it?

2002-12-04  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/GSLocale.h: Add category arg to
	SetLocale functions.
	* Source/GSLocale.m (GSSetLocaleC, GSSetLocale): Update for change.
	* Source/NSObject.m (+initialize): Idem.
	* Source/NSUserDefaults.m ([NSUserDefaults +standardUserDefaults]):
	Idem.

2002-12-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSerializer.m: bugfix deserialisation ... was trying to	
	read size of date/number when these values were not being serialized.

2002-12-03  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* Source/NSBundle.m ([NSBundle +initialize]): check for linked
	framework in two passes, first collect all the framework classes, then
	add it. The previous routine failed to add all the frameworks.

2002-12-02  Adam Fedor  <fedor@gnu.org>

	* Port baseadd to MacOSX.
	* Makefile.postamble (header-links): Don't link gnustep/gui to 
	Foundation for FOUNDATION_LIB=nx
	* Headers/gnustep/base/NSObjCRuntime.h (FOUNDATION_EXPORT): Define
	only if not defined already.
	* Headers/gnustep/base/objc-gnu2next.h: Define _CLS_META, _CLS_CLASS